[package]
name = "os-bridge"
version = "0.1.0"
edition = "2021"
authors = ["ydaqiong <ydaqiong@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# target = ["dep:serde"]  # 启用 serde 支持
[features]
default = ["windows", "linux", "macos"] # 默认启用 windows、linux、macos 支持
windows = []  # 启用 windows 支持
linux = []  # 启用 linux 支持
macos = []  # 启用 macos 支持

[dependencies]
thiserror = "2.0.12"
sysinfo = { version = "0.34.2"}

# [target.'cfg(target_os = "windows")'.dependencies]
# device_query = "2.1.0"
# winreg = "0.52.0"

# windows
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI",
    "Win32_System_WindowsProgramming",
    "Win32_System_Console",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Wdk_System_Threading",
    "Win32_Globalization",
    "Win32_UI_Input_Ime",
    "Win32_System_LibraryLoader","Wdk_System_Registry", "Win32_System_Com", "Win32_UI_TextServices"
]

#linux
# [target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
[target.'cfg(target_os = "linux")'.dependencies]

# macos
[target.'cfg(target_os = "macos")'.dependencies]

[build-dependencies]
cc = "1"